tests/ui/too_many_args_to_getter.stderr
error: Getter function can only have one argument of type pyo3::Python!
  --> $DIR/too_many_args_to_getter.rs:11:30
   |
11 |     fn get_num(&self, index: u32) {}
   |                              ^^^
